# whiskeysamlandfriends

./: README.md
directwave/: README.md  directwave.py
shocknawe/: README.md  requirements.txt  shocknawe.py
ticketsplease/: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  ticketsplease.py
ticketsplease/docs/: ADFS.md  AZURE.md  DCSYNC.md  LDAP.md  SAML.md  TICKET.md
ticketsplease/ticketsplease/: __init__.py  __main__.py
ticketsplease/ticketsplease/core/: __init__.py  utils.py
ticketsplease/ticketsplease/modules/: __init__.py  dcsync.py  ldap.py
ticketsplease/ticketsplease/modules/adfs/: __init__.py  configuration.py
ticketsplease/ticketsplease/modules/adfs/envelope/: __init__.py  adfs.py  rst.py  sct.py  utils.py
ticketsplease/ticketsplease/modules/azure/: __init__.py  defs.py  token.py
ticketsplease/ticketsplease/modules/saml/: ADFSpoof.py  __init__.py  utils.py  wmic.py
ticketsplease/ticketsplease/modules/ticket/: __init__.py  ap_req.py  krb_tgt.py
ticketsplease/ticketsplease/modules/ticket/impacketx/: __init__.py  ticketer.py
ticketsplease/ticketsplease/parser/: __init__.py  adfs.py  azure.py  dcsync.py  ldap.py  saml.py  ticket.py
whiskeysaml/: .gitignore  README.md  requirements.txt  whiskeysaml.py
whiskeysaml/templates/: index.html  login.html
