[metadata]
name = ticketsplease
version = attr: ticketsplease.__version__
description = Ticket/Token generator library.
long_description = file: README.md
long_description_content_type = text/markdown
author = Secureworks Adversary Group
# url = 
# license = MIT
# license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    # License :: OSI Approved :: MIT License

[options]
# find: isn't working for some reason...
packages =
    ticketsplease
    ticketsplease.parser
    ticketsplease.core
    ticketsplease.modules
    ticketsplease.modules.adfs
    ticketsplease.modules.adfs.envelope
    ticketsplease.modules.azure
    ticketsplease.modules.saml
    ticketsplease.modules.ticket
    ticketsplease.modules.ticket.impacketx
install_requires =
    bs4
    impacket
    lxml
    ldap3
    pyasn1
    pycryptodome
    pypykatz
    requests
    signxml
    wmi-client-wrapper-py3
    cryptography @ git+https://github.com/dmb2168/cryptography
python_requires = >=3.6.1

[options.packages.find]
exclude =
    resc*
    docs*
    tests*
    testing*

[options.entry_points]
console_scripts =
    ticketsplease = ticketsplease.__main__:run
